--- a/app/src/main/res/layout/fr_ineligible_informative.xml
+++ b/app/src/main/res/layout/fr_ineligible_informative.xml
@@ -56,8 +56,7 @@
                 style="@style/TextView.Bold"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dimen_52dp"
-                android:layout_marginEnd="@dimen/dimen_52dp"
+                android:layout_marginHorizontal="@dimen/dimen_32dp"
                 android:text="@string/can_not_get_cash_advance"
                 android:textSize="@dimen/size_20sp"
                 app:layout_constraintBottom_toBottomOf="@id/iv_top"
