--- a/app/src/main/res/layout/ineligible_requirement_layout.xml
+++ b/app/src/main/res/layout/ineligible_requirement_layout.xml
@@ -25,8 +25,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:background="@color/colorRed62">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/iv_check"
