--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -13,7 +13,7 @@
         android:id="@+id/homeFragment"
         android:name="com.wolfpackdigital.cashli.presentation.home.HomeFragment"
         android:label="HomeFragment"
-        tools:layout="@layout/fr_home" >
+        tools:layout="@layout/fr_home">
         <action
             android:id="@+id/action_homeFragment_to_claimCashFragment"
             app:destination="@id/claimCashFragment" />
@@ -25,6 +25,20 @@
         android:id="@+id/claimCashFragment"
         android:name="com.wolfpackdigital.cashli.presentation.claimCash.ClaimCashFragment"
         android:label="CashClaimFragment"
-        tools:layout="@layout/fr_claim_cash" />
+        tools:layout="@layout/fr_claim_cash">
+        <action
+            android:id="@+id/action_claimCashFragment_to_quizFragment"
+            app:destination="@id/quizFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/quizFragment"
+        android:name="com.wolfpackdigital.cashli.presentation.quiz.QuizFragment"
+        android:label="QuizFragment"
+        tools:layout="@layout/fr_quiz">
+        <argument
+            android:name="cashAmount"
+            app:argType="float" />
+    </fragment>
 
 </navigation>
