--- a/app/src/main/res/color/btn_radio_tint_selector.xml
+++ b/app/src/main/res/color/btn_radio_tint_selector.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/colorGray76" android:state_checked="true" />
-    <item android:color="@color/colorGrayB6" />
+    <item android:color="@color/colorGrayB6" android:state_checked="false"/>
+    <item android:color="@color/colorGrayB6"/>
 </selector>
