--- a/app/src/main/res/layout/fr_claim_cash.xml
+++ b/app/src/main/res/layout/fr_claim_cash.xml
@@ -282,6 +282,7 @@
                 android:layout_marginHorizontal="@dimen/dimen_24dp"
                 android:layout_marginTop="@dimen/dimen_48dp"
                 android:layout_marginBottom="@dimen/dimen_36dp"
+                android:onClick="@{() -> viewModel.continueToQuiz()}"
                 android:text="@string/continue_name"
                 app:contentPadding="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
