--- a/app/src/main/res/layout/fr_quiz.xml
+++ b/app/src/main/res/layout/fr_quiz.xml
@@ -61,7 +61,7 @@
                 android:layout_marginHorizontal="@dimen/dimen_24dp"
                 android:layout_marginTop="@dimen/dimen_32dp"
                 app:layout_constraintTop_toBottomOf="@id/tv_title"
-                app:title="@string/quiz_first_question" />
+                app:title="@{@string/quiz_first_question}" />
 
             <include
                 android:id="@+id/quiz_second_question"
@@ -72,7 +72,7 @@
                 app:layout_constraintEnd_toEndOf="@id/quiz_first_question"
                 app:layout_constraintStart_toStartOf="@id/quiz_first_question"
                 app:layout_constraintTop_toBottomOf="@id/quiz_first_question"
-                app:title="@string/quiz_second_question"
+                app:title="@{@string/quiz_second_question}"
                 app:viewState="@{viewModel.displayAltSecondQuestion ? View.GONE : View.VISIBLE}" />
 
             <include
@@ -84,7 +84,7 @@
                 app:layout_constraintEnd_toEndOf="@id/quiz_first_question"
                 app:layout_constraintStart_toStartOf="@id/quiz_first_question"
                 app:layout_constraintTop_toBottomOf="@id/quiz_first_question"
-                app:title="@string/quiz_second_question_alt"
+                app:title="@{@string/quiz_second_question_alt}"
                 app:viewState="@{viewModel.displayAltSecondQuestion ? View.VISIBLE : View.GONE}" />
 
             <androidx.constraintlayout.widget.Barrier
@@ -129,32 +129,15 @@
                 app:layout_constraintStart_toStartOf="@id/tv_tip_info"
                 app:layout_constraintTop_toBottomOf="@id/tv_tip_info" />
 
-            <RadioGroup
-                android:id="@+id/rg_tip"
+            <LinearLayout
+                android:id="@+id/ll_tip_selection"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:paddingVertical="@dimen/dimen_8dp"
+                android:orientation="vertical"
+                android:paddingVertical="@dimen/dimen_4dp"
                 app:layout_constraintEnd_toEndOf="@id/tv_tip_info"
                 app:layout_constraintStart_toStartOf="@id/tv_tip_info"
                 app:layout_constraintTop_toBottomOf="@id/tv_tip_label" />
-
-            <androidx.appcompat.widget.AppCompatSeekBar
-                android:id="@+id/sb_tip_amount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dimen_16dp"
-                android:max="100"
-                android:maxHeight="@dimen/dimen_10dp"
-                android:min="0"
-                android:minHeight="@dimen/dimen_10dp"
-                android:progress="@={viewModel.tipAmountPerc}"
-                android:progressDrawable="@drawable/bg_seekbar_alt_progress"
-                android:splitTrack="false"
-                android:thumb="@drawable/bg_seekbar_thumb"
-                android:thumbOffset="0dp"
-                android:thumbTint="@color/colorPrimaryDark"
-                app:layout_constraintTop_toBottomOf="@id/rg_tip"
-                tools:progress="50" />
 
             <ImageView
                 android:id="@+id/iv_group"
@@ -164,7 +147,46 @@
                 android:src="@drawable/ic_group"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/sb_tip_amount" />
+                app:layout_constraintTop_toBottomOf="@id/ll_tip_amount" />
+
+            <LinearLayout
+                android:id="@+id/ll_tip_amount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/dimen_10dp"
+                android:layout_marginTop="@dimen/dimen_16dp"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/ll_tip_selection"
+                app:viewState="@{viewModel.tipSeekbarVisible ? View.VISIBLE : View.GONE }">
+
+                <androidx.appcompat.widget.AppCompatSeekBar
+                    android:id="@+id/sb_tip_amount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:max="100"
+                    android:maxHeight="@dimen/dimen_10dp"
+                    android:min="0"
+                    android:minHeight="@dimen/dimen_10dp"
+                    android:progress="@={viewModel.tipAmountPerc}"
+                    android:progressDrawable="@drawable/bg_seekbar_alt_progress"
+                    android:splitTrack="false"
+                    android:thumb="@drawable/bg_seekbar_thumb"
+                    android:thumbOffset="0dp"
+                    android:thumbTint="@color/colorPrimaryDark"
+                    tools:progress="50" />
+
+                <TextView
+                    android:id="@+id/tv_tip_amount"
+                    style="@style/TextView.C2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dimen_12dp"
+                    android:layout_marginTop="@dimen/dimen_12dp"
+                    android:layout_marginBottom="@dimen/dimen_20dp"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorGrayB6"
+                    tools:text="$10" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_footnote"
