--- a/app/src/main/res/layout/fr_ineligible_informative.xml
+++ b/app/src/main/res/layout/fr_ineligible_informative.xml
@@ -72,7 +72,7 @@
                 android:layout_marginTop="@dimen/dimen_negative_100dp"
                 android:contentDescription="@null"
                 android:src="@drawable/ic_arch_white"
-                app:layout_constraintBottom_toBottomOf="@id/layout_salary"
+                app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintTop_toBottomOf="@id/iv_top" />
 
             <com.google.android.material.textview.MaterialTextView
