--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorWhiteF9">#F6F6F9</color>
     <color name="colorWhiteF5">#F0EDF5</color>
+    <color name="colorGrayF3">#E2E2F3</color>
     <color name="colorGrayF4">#DFDFF4</color>
     <color name="colorGrayDC">#C2C2DC</color>
     <color name="colorGrayB6">#9F9FB6</color>
