--- a/app/src/main/res/values/strings-no-translation.xml
+++ b/app/src/main/res/values/strings-no-translation.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="push_notification_channel_id" translatable="false">BaseProject notifications channel</string>
-    <string name="push_notification_channel_name" translatable="false">Notifications from BaseProject</string>
-    <string name="push_notification_channel_desc" translatable="false">Notifications from BaseProject</string>
+    <string name="push_notification_channel_id" translatable="false">Cashli notifications channel</string>
+    <string name="push_notification_channel_name" translatable="false">Notifications from Cashli</string>
+    <string name="push_notification_channel_desc" translatable="false">Notifications from Cashli</string>
 
     <string name="language_english" translatable="false">I speak English</string>
     <string name="language_spanish" translatable="false">Yo hablo Español</string>
