--- a/app/src/main/res/xml/cash_amount_description.xml
+++ b/app/src/main/res/xml/cash_amount_description.xml
@@ -34,16 +34,18 @@
             app:layout_constraintTop_toTopOf="@id/iv_cash_amount_start" />
 
         <Constraint
-            android:id="@+id/ll_select_cash"
+            android:id="@+id/cv_cash_amount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_4dp"
-            android:layout_marginTop="@dimen/dimen_32dp"
+            android:layout_marginTop="@dimen/dimen_20dp"
+            android:layout_marginBottom="@dimen/dimen_20dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_cash_amount_start" />
+            app:layout_constraintTop_toBottomOf="@id/iv_cash_amount_start"
+            app:layout_constraintVertical_bias="0" />
 
     </ConstraintSet>
 
@@ -69,16 +71,18 @@
             app:layout_constraintTop_toTopOf="@id/iv_cash_amount_start" />
 
         <Constraint
-            android:id="@+id/ll_select_cash"
+            android:id="@+id/cv_cash_amount"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_4dp"
-            android:layout_marginTop="@dimen/dimen_32dp"
+            android:layout_marginTop="@dimen/dimen_20dp"
+            android:layout_marginBottom="@dimen/dimen_20dp"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_cash_amount_start" />
+            app:layout_constraintTop_toBottomOf="@id/iv_cash_amount_start"
+            app:layout_constraintVertical_bias="0" />
 
     </ConstraintSet>
 </MotionScene>
