--- a/app/src/main/res/layout/fr_ineligible_informative.xml
+++ b/app/src/main/res/layout/fr_ineligible_informative.xml
@@ -53,6 +53,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_title"
                 style="@style/TextView.Bold"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -65,15 +66,13 @@
                 app:layout_constraintTop_toTopOf="@id/iv_top"
                 app:layout_constraintVertical_bias="0.6" />
 
-            <ImageView
+            <com.wolfpackdigital.cashli.shared.utils.views.ArcBackgroundView
                 android:id="@+id/white_arch_background"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="@dimen/dimen_negative_100dp"
-                android:contentDescription="@null"
-                android:src="@drawable/ic_arch_white"
-                app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintTop_toBottomOf="@id/iv_top" />
+                android:layout_marginTop="@dimen/dimen_20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_message_one"
