chore: rename colors

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,13 +24,13 @@
     <color name="claimCashGradientEnd">#B85EFF</color>
     <color name="claimCashBgDotsTint">#9B9BB8</color>
 
-    <color name="claimCashSeekbarGradientStart">#545482</color>
-    <color name="claimCashSeekbarGradientCenter">#7E7EA8</color>
-    <color name="claimCashSeekbarGradientEnd">#C0C0F2</color>
+    <color name="seekbarGradientStart">#545482</color>
+    <color name="seekbarGradientCenter">#7E7EA8</color>
+    <color name="seekbarGradientEnd">#C0C0F2</color>
 
-    <color name="claimCashSeekbarAltGradientStart">#BBBBE0</color>
-    <color name="claimCashSeekbarAltGradientCenter">#7E7EA8</color>
-    <color name="claimCashSeekbarAltGradientEnd">#545482</color>
+    <color name="seekbarAltGradientStart">#BBBBE0</color>
+    <color name="seekbarAltGradientCenter">#7E7EA8</color>
+    <color name="seekbarAltGradientEnd">#545482</color>
 
     <color name="divider">#E2E2F3</color>
 </resources>
