Done the layout for edit profile, implemented the base edit text with different styles for first name and last name as well as done validations for these two

--- a/app/src/main/res/layout/edit_text_base_layout.xml
+++ b/app/src/main/res/layout/edit_text_base_layout.xml
@@ -24,7 +24,7 @@
 
         <com.wolfpackdigital.cashli.shared.utils.views.CustomTextInputEditText
             android:id="@+id/tiet_content"
-            style="@style/BaseTextInputEditText"
+            style="?attr/customTextInputEditTextStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:imeOptions="actionDone"
