--- a/app/src/main/res/layout/fr_create_profile.xml
+++ b/app/src/main/res/layout/fr_create_profile.xml
@@ -65,6 +65,7 @@
                     android:layout_marginStart="@dimen/dimen_24dp"
                     android:layout_marginTop="@dimen/dimen_36dp"
                     android:layout_marginEnd="@dimen/dimen_24dp"
+                    android:theme="@style/EditTextBaseTheme"
                     app:cliError="@{viewModel.firstNameError}"
                     app:cliHint="@{@string/et_hint}"
                     app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
@@ -83,6 +84,7 @@
                     android:layout_marginStart="@dimen/dimen_24dp"
                     android:layout_marginTop="@dimen/dimen_28dp"
                     android:layout_marginEnd="@dimen/dimen_24dp"
+                    android:theme="@style/EditTextBaseTheme"
                     app:cliError="@{viewModel.lastNameError}"
                     app:cliHint="@{@string/et_hint}"
                     app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
@@ -101,6 +103,7 @@
                     android:layout_marginStart="@dimen/dimen_24dp"
                     android:layout_marginTop="@dimen/dimen_28dp"
                     android:layout_marginEnd="@dimen/dimen_24dp"
+                    android:theme="@style/EditTextBaseTheme"
                     app:cliError="@{viewModel.streetError}"
                     app:cliHint="@{@string/et_hint}"
                     app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
@@ -118,6 +121,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimen_24dp"
                     android:layout_marginTop="@dimen/dimen_28dp"
+                    android:theme="@style/EditTextBaseTheme"
                     app:cliError="@{viewModel.zipCodeError}"
                     app:cliHint="@{@string/et_hint}"
                     app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
@@ -136,6 +140,7 @@
                     android:layout_marginStart="@dimen/dimen_10dp"
                     android:layout_marginTop="@dimen/dimen_28dp"
                     android:layout_marginEnd="@dimen/dimen_24dp"
+                    android:theme="@style/EditTextBaseTheme"
                     app:cliError="@{viewModel.cityAndStateError}"
                     app:cliHint="@{@string/city_state_hint}"
                     app:cliImeOptions="@{EditorInfo.IME_ACTION_NEXT}"
@@ -154,6 +159,7 @@
                     android:layout_marginTop="@dimen/dimen_36dp"
                     android:layout_marginEnd="@dimen/dimen_24dp"
                     android:layout_marginBottom="@dimen/dimen_64dp"
+                    android:theme="@style/EditTextBaseTheme"
                     app:cliError="@{viewModel.emailError}"
                     app:cliHint="@{@string/et_hint}"
                     app:cliImeOptions="@{EditorInfo.IME_ACTION_DONE}"
