--- a/app/src/main/res/layout/fr_choose_password.xml
+++ b/app/src/main/res/layout/fr_choose_password.xml
@@ -55,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimen_24dp"
                 android:layout_marginTop="@dimen/dimen_40dp"
+                android:theme="@style/EditTextBaseTheme"
                 app:cliDrawableEnd="@{viewModel.isPasswordVisible ? @drawable/ic_eye_off : @drawable/ic_eye}"
                 app:cliDrawableEndClick="@{viewModel::onPasswordVisibilityChange}"
                 app:cliError="@{viewModel.passwordError}"
@@ -74,6 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimen_24dp"
                 android:layout_marginTop="@dimen/dimen_28dp"
+                android:theme="@style/EditTextBaseTheme"
                 app:cliDrawableEnd="@{viewModel.isConfirmPasswordVisible ? @drawable/ic_eye_off : @drawable/ic_eye}"
                 app:cliDrawableEndClick="@{viewModel::onConfirmPasswordVisibilityChange}"
                 app:cliError="@{viewModel.passwordError}"
@@ -105,8 +107,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dimen_8dp"
-                android:layout_marginEnd="@dimen/dimen_32dp"
                 android:layout_marginTop="@dimen/dimen_32dp"
+                android:layout_marginEnd="@dimen/dimen_32dp"
                 android:layout_marginBottom="@dimen/dimen_32dp"
                 android:textAlignment="viewStart"
                 android:textColor="@color/colorGrayDC"
