--- a/app/src/main/res/layout/fr_more.xml
+++ b/app/src/main/res/layout/fr_more.xml
@@ -74,6 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/dimen_20dp"
+                android:onClick="@{() -> viewModel.goToEditProfileScreen()}"
                 app:icon="@drawable/ic_edit"
                 app:layout_constraintBottom_toBottomOf="@id/tv_name"
                 app:layout_constraintEnd_toEndOf="parent"
