--- a/app/src/main/res/layout/fr_request_code.xml
+++ b/app/src/main/res/layout/fr_request_code.xml
@@ -86,6 +86,7 @@
                 android:layout_marginHorizontal="@dimen/dimen_24dp"
                 android:layout_marginTop="@dimen/dimen_40dp"
                 android:paddingBottom="@dimen/dimen_4dp"
+                android:theme="@style/EditTextBaseTheme"
                 android:visibility="gone"
                 app:cliError="@{viewModel.error}"
                 app:cliHint="@{@string/et_hint}"
