--- a/app/src/main/res/layout/fr_reset_password.xml
+++ b/app/src/main/res/layout/fr_reset_password.xml
@@ -46,6 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_24dp"
             android:layout_marginTop="@dimen/dimen_40dp"
+            android:theme="@style/EditTextBaseTheme"
             app:cliDrawableEnd="@{viewModel.isPasswordVisible ? @drawable/ic_eye_off : @drawable/ic_eye}"
             app:cliDrawableEndClick="@{viewModel::onPasswordVisibilityChanged}"
             app:cliError="@{viewModel.passwordError}"
@@ -65,6 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_24dp"
             android:layout_marginTop="@dimen/dimen_28dp"
+            android:theme="@style/EditTextBaseTheme"
             app:cliDrawableEnd="@{viewModel.isConfirmPasswordVisible ? @drawable/ic_eye_off : @drawable/ic_eye}"
             app:cliDrawableEndClick="@{viewModel::onConfirmPasswordVisibilityChanged}"
             app:cliError="@{viewModel.passwordError}"
