--- a/app/src/main/res/layout/fr_signin.xml
+++ b/app/src/main/res/layout/fr_signin.xml
@@ -70,6 +70,7 @@
                 android:layout_marginHorizontal="@dimen/dimen_24dp"
                 android:layout_marginTop="@dimen/dimen_negative_48dp"
                 android:paddingBottom="@dimen/dimen_4dp"
+                android:theme="@style/EditTextBaseTheme"
                 android:visibility="gone"
                 app:cliError="@{viewModel.error}"
                 app:cliHint="@{@string/et_hint}"
@@ -135,6 +136,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/dimen_24dp"
                 android:layout_marginTop="@dimen/dimen_28dp"
+                android:theme="@style/EditTextBaseTheme"
                 app:cliDrawableEnd="@{viewModel.isPasswordVisible ? @drawable/ic_eye_off : @drawable/ic_eye}"
                 app:cliDrawableEndClick="@{viewModel::onPasswordVisibilityChange}"
                 app:cliError="@{viewModel.error}"
