--- a/app/src/main/res/layout/fr_validate_code.xml
+++ b/app/src/main/res/layout/fr_validate_code.xml
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimen_24dp"
             android:layout_marginTop="@dimen/dimen_40dp"
+            android:theme="@style/EditTextBaseTheme"
             app:cliError="@{viewModel.invalidCodeErrorVisible}"
             app:cliImeOptions="@{EditorInfo.IME_ACTION_DONE}"
             app:cliInputType="@{InputType.TYPE_CLASS_NUMBER}"
