--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,4 +3,8 @@
     <declare-styleable name="ErrorState">
         <attr name="state_error" format="boolean" />
     </declare-styleable>
+
+    <declare-styleable name="BaseEditText">
+        <attr name="customTextInputEditTextStyle" format="reference" />
+    </declare-styleable>
 </resources>
